--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.55.0",
+    "smooth-scrollbar": "^8.8.1",
+    "smooth-scrollbar-react": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
